feat(devtools): add signals toggle

--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/devtools-tabs.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/devtools-tabs.component.html
@@ -141,6 +141,16 @@
         >
       </label>
     }
+    @if (supportedApis().signals) {
+      <label mat-menu-item disableRipple>
+        <mat-slide-toggle
+          [checked]="signalGraphEnabled()"
+          (change)="setSignalGraph($event.checked)"
+        >
+          Enable Signal Graph</mat-slide-toggle
+        >
+      </label>
+    }
   </div>
 </mat-menu>
 
