feat(devtools): connect signal graph into directive explorer

--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-tab/property-tab.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/directive-explorer/property-tab/property-tab.component.html
@@ -1,10 +1,15 @@
 @let currentSelectedElement = this.currentSelectedElement();
 
 @if (currentSelectedElement) {
-  <ng-property-tab-header [currentSelectedElement]="currentSelectedElement" />
+  <ng-property-tab-header
+    [currentSelectedElement]="currentSelectedElement"
+    [signalGraphAvailable]="signalGraphAvailable()"
+    (showSignalGraph)="showSignalGraph.emit(null)"
+  />
   <ng-property-tab-body
     (inspect)="inspect.emit($event)"
     (viewSource)="viewSource.emit($event)"
+    (showSignalGraph)="showSignalGraph.emit($event)"
     [currentSelectedElement]="currentSelectedElement"
   />
 
