--- a/devtools/projects/ng-devtools/src/lib/devtools-tabs/devtools-tabs.component.html
+++ b/devtools/projects/ng-devtools/src/lib/devtools-tabs/devtools-tabs.component.html
@@ -77,6 +77,7 @@
         [showCommentNodes]="showCommentNodes()"
         [isHydrationEnabled]="isHydrationEnabled()"
         (toggleInspector)="toggleInspector()"
+        [signals]="signalGraphEnabled()"
       />
 
       @let profilerVisible = activeTab() === 'Profiler';
